--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,9 +25,55 @@
     </header>
  <div class = " main_body--desktop">
      <div class="main_search--desktop"><!-- barra lateral blanca con botones y busquedas   -->
-        <p>aqui va el contenido </p>
+        <div>
+            <img src="/img/avatar.jpg" alt="">
+            <p>yo@gmail.com</p>
+        </div>
+
+        <div class="search-bar--desktop">
+            <form action="" method="GET" class="">
+                <div class="search-bar--input">
+                    <label for="search" ><i class="fa-solid fa-magnifying-glass"></i></label>
+                    <input type="text" placeholder="Search"></input>
+                    
+                </div>
+            </form>
+        </div>
+
+        <div class="search-bar--container">
+            <br>
+            <p>Mis Movimientos</p>
+            <div >
+                <button id ="all" >Todos</button>
+                
+                <button > Egresos </button>
+                
+                                <button id ="entry" class="main-search--btn">Ingreso</button> 
+            </div>
+
+            <div>
+                <div class="search-bar--filter">
+                    <form action="" method="GET">
+                        <p>Filtrar por Categoria</p>
+                        <div>
+    
+                            <select name="allCategories" id =" ">
+                                <option value="sueldo">Sueldo</option>
+                            </select>
+                            <select name="allCategories" id =" ">
+                                <option value="sueldo">Sueldo</option>
+                            </select>
+                            <button id="filter-btn"><i class="fa-solid fa-magnifying-glass"></i></button>
+                        </div>
+                    </form>
+
+                </div>
+            </div>
+
+        </div>
+
      </div>
-     <div class="main">
+     <div class="main"><!-- BALANCE  -->
          <div class="main_container-index ">
              <div class="wrapper">
 
@@ -76,7 +122,7 @@
              </div>
              </div>
      </div>
-     <div class="main_widget-bar--desktop"><!-- pantalla de ingreso y egreso  -->
+     <div class="main_widget-bar--desktop"><!--WIDGET de ingreso y egreso  -->
         <div class="entryForm_mainContainer"> <!-- widtget ingreso -->
             <div class="main_header-widget--desktop">
                 
