--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -280,8 +280,9 @@
     .main_widget-bar--desktop{
         display:none
     }
-    .main-search--desktop{
-        display:none
+    .main_search--desktop{
+
+        display:none;
     }
     .main_header-widget--desktop{
         display:none
@@ -327,6 +328,7 @@
             justify-content: space-around;
             width: 50%;
             margin-right: 2%;
+            ;
         }
         .index-btn button{
             display:none
@@ -335,6 +337,13 @@
             display:flex;
             flex-direction: column;
             width: 30%;
+            padding: 1em;
+            border: 1px solid #d1d1d1;
+            border-radius: 10px;
+            margin: 0em 1em;
+            background-color: #f1f1f1;
+            align-items: center;
+            box-shadow: 2em;
         }
         .entryForm_mainContainer{
            border: 1px solid #dac7c7;
@@ -354,7 +363,7 @@
             display: flex;
             flex-direction: row;
             justify-content: space-between;
-            background-color: #0b22a7ba;
+            background-color: #4c5dbb;
             color:white;
             height: 4vh;
             border-radius: 10px 10px 0px 0px;
@@ -364,10 +373,81 @@
         .entryForm_mainContainer div:nth-child(2){
             padding: 2%;
         }
-        .main_container-index div:nth-child(1){
-        }
+       
         .wrapper{
             height: 0px;
             background: red;
         }
-    }
+        .search-bar--container{
+            display:flex;
+            flex-direction: column;
+            border-top: 1px solid #aca6a6;
+            margin-top: 22px;
+        }
+        .search-bar--container button{
+            background-color: white;
+            border: 1px solid #aaaaaa;
+            height: 2em;
+            width: 100%;
+            border-radius: 10px;
+            margin-top: 0.5em;
+        }
+        .main_search--desktop img {
+            width: 100px;
+            height: 100px;
+            border-radius: 72% 72%;
+            object-fit: cover;
+        }
+        .main_search--desktop>div:first-of-type{
+            display: flex;
+            height: 10em;
+            flex-direction: column;
+            align-items: center;
+            margin-top: 2em;
+            /* border-bottom: 1px solid grey; */
+            margin-bottom: 1em;
+        }
+        .search-bar--container select{
+            width: 100%;
+            height: 2em;
+        }
+        .search-bar--input {
+            border: 1px solid #e0d6d6;
+            border-radius: 19px;
+            display: grid;
+            align-items: center;
+            background-color: white;
+            height: 2em;
+            grid-template-columns: 0.8fr 2fr;
+            text-align: center;
+            padding: 0px 5px;
+            color: grey;
+            width: 100%;
+            
+        }
+        .search-bar--input input{
+            border: none;
+            width: 11vw;
+            padding-right: 14px;
+        }
+        .search-bar--input i{
+            flex-grow: 2;
+        }
+        ::placeholder{
+            font-style: italic;
+        }
+        .search-bar--filter {
+            /* border: 1px solid black; */
+            margin-top: 17px;
+        }
+        .search-bar--filter  select{
+            border: 1px solid #c5bbbb;
+            margin-top: 7px;
+        }
+        .search-bar--filter  button{
+            border: 1px solid #c7c7c7;
+            margin-top: 7px;
+            background-color: #41508e;
+            color: white;
+        }
+    } 
