Fix : arreglo de select categories en barra lateral

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -429,7 +429,7 @@
             margin-bottom: 1em;
         }
         .search-bar--container select{
-            width: 100%;
+            width: 12em;
             height: 2em;
         }
         .search-bar--input {
