--- a/views/index.ejs
+++ b/views/index.ejs
@@ -58,12 +58,12 @@
                         <p>Filtrar por Categoria</p>
                         <div>
     
-                            <select name="allTypes" id =" ">
+                            <select name="allTypes" id ="type-dropdown">
                                 <option value=""></option>
-                                <option value="entry">Ingreso</option>
-                                <option value="withdrawal">Gasto</option>
+                                <option value="entry" >Ingreso</option>
+                                <option value="withdrawal" >Gasto</option>
                             </select>
-                            <select name="allCategories" id =" ">
+                            <select name="allCategories" id ="category-filter" class="">
                                 <option value=""></option>
                             </select>
                             <button id="filter-btn"><i class="fa-solid fa-magnifying-glass"></i></button>
