fix : filtros de busqueda funcionando

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -54,7 +54,7 @@
 
             <div>
                 <div class="search-bar--filter">
-                    <form action="" method="GET">
+                    <!-- <form action="" method=""> -->
                         <p>Filtrar por Categoria</p>
                         <div>
     
@@ -68,7 +68,7 @@
                             </select>
                             <button id="filter-btn"><i class="fa-solid fa-magnifying-glass"></i></button>
                         </div>
-                    </form>
+                 <!--    </form> -->
 
                 </div>
             </div>
