--- a/views/categoryEdit.ejs
+++ b/views/categoryEdit.ejs
@@ -20,8 +20,8 @@
  
         <div class="main_form">
             <div class="main_container">
-
-                <div class="main_header">
+                
+                <div class="main_header entryForm_title">
                     <i class="fa-solid fa-bars"></i>
                     <p>MI BILLETERA</p> 
                     <i class="fa-solid fa-power-off"></i>             
@@ -32,9 +32,6 @@
                     </div>
                     <form action="/categoryEdit"  method="POST"  class="" id="form">
                         <div class="entryForm_container">
-                                
-                        
-                            
                                 
                                 <label for="category">Categoria</label>
                                 <input type="text" name="category"></input>
