--- a/views/entryForm.ejs
+++ b/views/entryForm.ejs
@@ -70,6 +70,89 @@
                 </div>
               
         </div>
+        <div>
+
+                <div class="entryForm_title"  data-type="entry">
+                    <p>Nuevo Ingreso</p>
+                </div>
+                <form action="/entry"  method="POST"  class="" id="form">
+                    <div class="entryForm_container">
+                            
+                            <label for="date">Fecha </label>
+                            <div>
+                                <input type="date" name="date" id="date" required  >
+                                <span></span>
+                            </div>
+                        
+                            
+                            <label for="category">Categoria</label>
+                            <div id="dropdown">
+                             <!--    <input type="text"  name="category" id="category" required > -->
+                             <select name="category" id="category-select" placeholder="Selecciona Categoria"> 
+                                <option value=""></option>
+                            </select>
+                            <a type="button" class="edit_btn" id="edit-btn" href = "/categoryEdit"><i class="fas fa-plus-circle"></i></a>
+                            
+                             <span></span>
+                            </div>
+                            <div class="amount-symbol">
+
+                                <label for="amount">Monto</label>
+                                <span>$</span>
+                            </div>
+                            <div  >
+    
+                                <input  name="amount" id="amount"   >
+                                <span></span>
+                            </div>
+                            <button type="submit" class="editForm-btn-order-delete " id ="btn" >Aceptar</button>
+                    </div>
+              
+    
+                </form>
+            </div>
+            <!-- prueba -->
+            <div>
+
+                <div class="entryForm_title"  data-type="entry">
+                    <p>Nuevo Ingreso</p>
+                </div>
+                <form action="/entry"  method="POST"  class="" id="form">
+                    <div class="entryForm_container">
+                            
+                            <label for="date">Fecha </label>
+                            <div>
+                                <input type="date" name="date" id="date" required  >
+                                <span></span>
+                            </div>
+                        
+                            
+                            <label for="category">Categoria</label>
+                            <div id="dropdown">
+                             <!--    <input type="text"  name="category" id="category" required > -->
+                             <select name="category" id="category-select" placeholder="Selecciona Categoria"> 
+                                <option value=""></option>
+                            </select>
+                            <a type="button" class="edit_btn" id="edit-btn" href = "/categoryEdit"><i class="fas fa-plus-circle"></i></a>
+                            
+                             <span></span>
+                            </div>
+                            <div class="amount-symbol">
+
+                                <label for="amount">Monto</label>
+                                <span>$</span>
+                            </div>
+                            <div  >
+    
+                                <input  name="amount" id="amount"   >
+                                <span></span>
+                            </div>
+                            <button type="submit" class="editForm-btn-order-delete " id ="btn" >Aceptar</button>
+                    </div>
+              
+    
+                </form>
+            </div>
         <footer>
             <div class="header">
 
